fix a bug of scrollbar

--- a/style/_var.scss
+++ b/style/_var.scss
@@ -1,3 +1,6 @@
+* {
+	box-sizing: border-box;
+}
 $background-white: #fafafa;
 $blue: #4a90e2;
 $border-color-hover: #666;
@@ -32,4 +35,3 @@ $color-splitLine: #dadada;
 @mixin spin {
 	animation: spin 2s infinite linear;
 }
-
